<resources>
    <string name="app_name">Calculator_1</string>
    <string name="equalButtonText">=</string>
    <string name="dotButtonText">.</string>
    <string name="zeroButtonText">0</string>
    <string name="oneButtonText">1</string>
    <string name="twoButtonText">2</string>
    <string name="threeButtonText">3</string>
    <string name="plusButtonText">+</string>
    <string name="minusButtonText">-</string>
    <string name="multiplyButtonText">×</string>
    <string name="divideButtonText">÷</string>
    <string name="procentButtonText">%</string>
    <string name="fourButtonText">4</string>
    <string name="fiveButtonText">5</string>
    <string name="sixButtonText">6</string>
    <string name="sevenButtonText">7</string>
    <string name="eightButtonText">8</string>
    <string name="nineButtonText">9</string>
    <string name="clearButtonText">C</string>
    <string name="plusMinusButtonText">+/-</string>
</resources>